# backend/src/modules/auth/dto/reset-password.dto.ts
@@ -1,12 +1,15 @@
-import { IsString, IsNotEmpty, MinLength } from 'class-validator';
+import { IsString, MinLength, IsNotEmpty } from 'class-validator';
+import { ApiProperty } from '@nestjs/swagger';
 
 export class ResetPasswordDto {
+  @ApiProperty({ description: 'Token reçu par email' })
   @IsString()
   @IsNotEmpty()
   token: string;
 
+  @ApiProperty({ description: 'Nouveau mot de passe', minLength: 6 })
   @IsString()
   @IsNotEmpty()
   @MinLength(6)
-  password: string;
+  newPassword: string;
 }
